[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/Bonus 03_flip_v.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Button BG shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/Pistol HUD.png" type="Texture" id=4]
[ext_resource path="res://scripts/WeaponPanel.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/Money Icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 0.407843, 0.321569, 0.321569, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 1 )

[node name="WeaponPanel" type="Panel"]
self_modulate = Color( 0.219608, 0.2, 0.160784, 1 )
margin_right = 250.0
margin_bottom = 70.0
rect_min_size = Vector2( 250, 70 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
weapon = 3

[node name="WeaponButton" type="TextureButton" parent="."]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -95.0
margin_bottom = 65.0
rect_min_size = Vector2( 150, 60 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WeaponButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentButton" type="TextureButton" parent="WeaponButton"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 172.352
margin_top = -45.3415
margin_right = 72.352
margin_bottom = -10.3415
rect_min_size = Vector2( 50, 35 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WeaponButton/EquipmentButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.866667, 0.615686, 1 )
text = "SET"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="WeaponButton"]
margin_left = 158.0
margin_top = 21.0
margin_right = 231.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "30000"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -19.0
margin_right = 151.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.690196, 0.529412, 0.207843, 1 )
text = "Pistol"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="WeaponButton" to="." method="_on_WeaponButton_pressed"]
[connection signal="pressed" from="WeaponButton/EquipmentButton" to="." method="_on_EquipmentButton_pressed"]
[connection signal="pressed" from="WeaponButton/BuyButton" to="." method="_on_BuyButton_pressed"]
